--- a/Html de prueba.html
+++ b/Html de prueba.html
@@ -1,10 +1,17 @@
 <html>
     <head>
-        <title> Post Aprendiendo a Aprender</title>
+        <title>El titulo del post</title>
         <link rel= "stylesheet" href="css/estilos.css" />
     </head>
     <body>
-        <h1> Aqui vamos hacer clases para autodidactas</h1>
-        <p> Parrafo inicial </p>
+        <div id="container"></div>
+            <div id="cabecera"></div>
+                Cabecera
+            </div>
+            <div id="post">
+                <h1>Este es el titulo atractivo e interesante del post</h1>
+                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+            </div>
+        </div>
     </body>
 </html>
