Cambio de titulo de blogpost a ultrablog

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Bienvenidos a BlogPost</title>
+        <title>Bienvenidos a UltraBlog</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
