--- a/Blogpost.html
+++ b/Blogpost.html
@@ -1,13 +1,14 @@
 <html>
     <head>
         <title>Bienvenidos a UltraBlog</title>
-        <link rel="stylesheet" href="css/estilos.css">
+        <link rel="stylesheet" 
+            href="css/estilos.css">
     </head>
     <body>
         <div id="container">
             <div id="cabecera">
                 <img id="logo" 
-                src="imagenes/dragon.png" />
+                    src="imagenes/dragon.png" />
                 Hyperblog
                 <span id="tagline">Tu blog de confianza</span>
             </div>
