agregado el footer y el utf

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <metacharset="UTF-8">
         <title>Bienvenidos a UltraBlog</title>
         <link rel="stylesheet" 
             href="css/estilos.css">
@@ -16,7 +17,7 @@
                 <h1>Este es el ti­tulo atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
                 <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadi­sticamente no lo eres.... por ahora.</p>
-                <p>Hecho con powwweer </p>
+                <div id= "footer" >Hecho con powwweer </div>
             </div>
         </div>
     </body>
