cambiado el titulo

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <metacharset="UTF-8">
-        <title>Bienvenidos a UltraBlog</title>
+        <title>Bienvenidos a UltraBlog 2.0</title>
         <link rel="stylesheet" 
             href="css/estilos.css">
     </head>
