--- a/Blogpost.html
+++ b/Blogpost.html
@@ -15,6 +15,7 @@
             </div>
             <div id="post">
                 <h1>Este es el ti­tulo atractivo e interesante del post</h1>
+                <p><img src= "imagenes/tanjiro.jpg" width= "100%" /></p>
                 <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>
                 <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadi­sticamente no lo eres.... por ahora.</p>
                 <div id= "footer" >Hecho con powwweer </div>
